10-Ingress-Context-Path-Based-Routing/kube-manifests/04-IngressService-Manifests/01-Ingress-Context-Path-Based-Routing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cpr
spec:
  rules:
   - http:
      paths:
        - pathType: Prefix
          path: /app1/
          backend:
            service:
              name: app1-nginx-clusterip-service
              port:
                number: 80   
        - pathType: Prefix
          path: /app2/
          backend:
            service:
              name: app2-nginx-clusterip-service
              port:
                number: 80          
        - pathType: Prefix
          path: /
          backend:
            service:
              name: usermgmt-webapp-clusterip-service
              port:
                number: 80
